--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -1,11 +1,11 @@
-- name: HTML5/CSS3
+- name: Java
   percentage: 90
   color: danger
 
-- name: Go
-  percentage: 80
+- name: Linux
+  percentage: 65
   color:
 
 - name: Python
-  percentage: 70
+  percentage: 20
   color: secondary
