--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,7 +1,7 @@
-- name: Adobe Premiere Pro
-  percentage: 10
+- name: Fishing
+  percentage: 40
   color: info
 
-- name: Adobe Illustrator
+- name: Gaming
   percentage: 90
   color: success
