--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,5 +1,5 @@
 - title: Student
   from: 2016
   to: present
-  description: I am currently a student learning about the world :world:. Schools boring though so if you want to collab
+  description: I am currently a student learning about the world; Schools boring though so if you want to collab
   send me a email or hit me up on discord. (playboyfear)
