--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ nav_exclude:                                            # The following paths ar
   - pages/tags.html
   - pages/404.html
   - pages/index.md
-  - blog
+  - blog/
   - documentation/partials/**                           # For Documentation Only
 
 
@@ -50,7 +50,7 @@ author:
 
 
 ### Posts ###
-permalink: /blog/:title
+permalink: 
 
 
 ### Collections ###
