--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 # dribbble          : your_username
   email             : playboyfear@proton.me
 # facebook          : your_username
-# github            : your_username
+  github            : your_username
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
