--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title               : Playboy Fear
 description         : >-
                       Suger becomes code :candy: ,
-                      procrastination over work
+                      procrastination over work,
                       and making syntax cry.
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : fear-itself/fear-itself.github.io      # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
