--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -10,6 +10,15 @@
   percentage: 25
   color: secondary
 
+- name: SSH
+  percentage: 25
+  color: info
+
+
+- name: Docker
+  percentage: 10
+  color: light
+
 - name: Python
   percentage: 2
   color: dark
