--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### Site Settings ###
-title               : Playboy Fear
+title               : :candy:
 description         : >-
                       Suger becomes code :candy: ,
                       procrastination over work,
